--- a/ionic-basics/src/pages/quotes/quotes.html
+++ b/ionic-basics/src/pages/quotes/quotes.html
@@ -11,6 +11,14 @@
 <ion-content padding>
   <ion-card *ngFor='let quote of quoteGroup.quotes; let i = index'>
     <ion-card-header># {{i+1}}</ion-card-header>
-     <ion-card-content>{{quote.text}}</ion-card-content>
+     <ion-card-content>
+       <p>{{quote.text}}</p>
+       <p>{{quote.person}}</p>
+      </ion-card-content>
+      <ion-row>
+        <ion-col text-right>
+          <button ion-button clear>Favorite</button>
+        </ion-col>
+      </ion-row>
   </ion-card>
 </ion-content>
