--- a/ionic-basics/src/pages/quotes/quotes.html
+++ b/ionic-basics/src/pages/quotes/quotes.html
@@ -17,7 +17,7 @@
       </ion-card-content>
       <ion-row>
         <ion-col text-right>
-          <button ion-button clear>Favorite</button>
+          <button ion-button clear (click)='onAddToFavorite(quote)'>Favorite</button>
         </ion-col>
       </ion-row>
   </ion-card>
