--- a/doctors-app-mlab/src/pages/dashboard/dashboard.html
+++ b/doctors-app-mlab/src/pages/dashboard/dashboard.html
@@ -10,6 +10,7 @@
 
 
 <ion-content padding>
+   <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="setFilteredItems()"></ion-searchbar>
     <ion-list>
     <button ion-item *ngFor='let patient of patients' [navPush]='patientDetail' [navParams]='patient'>
       <ion-avatar item-left>
