--- a/doctors-app-mlab/src/pages/dashboard/dashboard.html
+++ b/doctors-app-mlab/src/pages/dashboard/dashboard.html
@@ -17,6 +17,7 @@
           <ion-icon name='contact'></ion-icon>
       </ion-avatar>
       <h2>{{patient?.firstname}} {{patient?.lastname}}</h2>
+      <h2 item-reight>{{patient?.Date}}</h2>
        <ion-icon name="arrow-forward" item-right></ion-icon>
     </button>
   </ion-list>
