--- a/tourist/src/pages/photos/photos.html
+++ b/tourist/src/pages/photos/photos.html
@@ -6,7 +6,7 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list *ngFor='let photo of photos'>
-      {{photo?.getUrl({ 'maxWidth': 350, 'maxHeight': 350 })}}
+  <ion-list >
+    <ion-img  *ngFor='let url of urls' [src]=url width="100%" height="150"></ion-img>
   </ion-list>
 </ion-content>
