--- a/doctors-app-firebase/src/pages/home/home.html
+++ b/doctors-app-firebase/src/pages/home/home.html
@@ -1,13 +1,24 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>Home</ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-menu [content]="mycontent">
+  <ion-header>
+    <ion-navbar>
+      <ion-title>Menu</ion-title>
+    </ion-navbar>
+  </ion-header>
 
-<ion-content padding>
-   you are authenticated
-      <button ion-button icon-only (click)="logOut()"> log out
+  <ion-content padding>
+    <!--<button ion-button icon-only (click)="logOut()"> log out
         <ion-icon name="log-out"></ion-icon>
       </button>
-  
-</ion-content>
+  -->
+    <ion-list>
+      <button ion-item *ngFor='let page of pages' (click)='openPage(page)'>
+            {{page.title}}
+          </button>
+      <button ion-item menuClose (click)='logout()'>
+              Logout
+      </button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav #mycontent [root]="rootPage" swipeBackEnabled="false"></ion-nav>
