--- a/doctors-app-mlab/src/pages/registration/registration.html
+++ b/doctors-app-mlab/src/pages/registration/registration.html
@@ -21,7 +21,7 @@
             </ion-item>
 
             <ion-item>
-              <ion-input type="text" placeholder="your Id" name="doctors_id" ngModel required></ion-input>
+              <ion-input type="text" placeholder="username" name="doctors_id" ngModel required></ion-input>
             </ion-item>
 
           </ion-list>
