--- a/doctors-app-mlab/src/pages/login/login.html
+++ b/doctors-app-mlab/src/pages/login/login.html
@@ -13,7 +13,7 @@
           <ion-list inset>
 
             <ion-item>
-              <ion-input type="text" placeholder="Email" name="email" ngModel required></ion-input>
+              <ion-input type="text" placeholder="username" name="email" ngModel required></ion-input>
             </ion-item>
 
             <ion-item>
