--- a/doctors-app-mlab/src/pages/patient-detail/patient-detail.html
+++ b/doctors-app-mlab/src/pages/patient-detail/patient-detail.html
@@ -38,5 +38,10 @@
       <span>Date</span>
       <h2>{{patientDetail?.Date}}</h2>
     </ion-item>
+    <ion-item>
+      <ion-icon name='person' item-left></ion-icon>
+      <span>Gender</span>
+      <h2>{{patientDetail?.gender}}</h2>
+    </ion-item>
   </ion-list>
 </ion-content>
