--- a/doctors-app-firebase/src/pages/dashboard/dashboard.html
+++ b/doctors-app-firebase/src/pages/dashboard/dashboard.html
@@ -11,7 +11,7 @@
 
 <ion-content padding>
    <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="setFilteredItems()"></ion-searchbar>
-    <ion-list>
+    <ion-list *ngIf='patients && patients.length'>
     <button ion-item *ngFor='let patient of patients' [navPush]='patientDetail' [navParams]='patient'>
       <ion-avatar item-left>
           <ion-icon name='contact'></ion-icon>
@@ -21,4 +21,5 @@
        <ion-icon name="arrow-forward" item-right></ion-icon>
     </button>
   </ion-list>
+  <h3 *ngIf="patients && patients.length == 0">No Patient Added</h3>
 </ion-content>
