--- a/tourist/src/pages/photos/photos.html
+++ b/tourist/src/pages/photos/photos.html
@@ -6,7 +6,10 @@
 </ion-header>
 
 <ion-content padding>
-  <ion-list >
+  <ion-list *ngIf='urls && urls.length > 0'>
     <ion-img  *ngFor='let url of urls' [src]=url width="100%" height="150"></ion-img>
+  </ion-list>
+  <ion-list>
+    <h2 *ngIf='urls && urls.length == 0'>No Image to show</h2>
   </ion-list>
 </ion-content>
