implemented new groups UI

--- a/family-traacking-app/src/pages/groups/groups.html
+++ b/family-traacking-app/src/pages/groups/groups.html
@@ -5,7 +5,7 @@
     </button>
     <ion-title>Groups</ion-title>
     <ion-buttons end>
-      <button ion-button icon-only (click)="addgroup()">
+      <button ion-button icon-only (click)="addGroup()">
         <ion-icon name="contacts"></ion-icon>
       </button>
     </ion-buttons>
