--- a/family-traacking-app/src/pages/groups/groups.html
+++ b/family-traacking-app/src/pages/groups/groups.html
@@ -15,4 +15,15 @@
 
 
 <ion-content padding>
+    <ion-list no-lines>
+        <ion-list-header>
+          My Groups
+        </ion-list-header>
+        <ion-item *ngFor="let item of allMyGroups">
+          <ion-avatar item-left>
+            <img src="{{item.groupimage}}">
+          </ion-avatar>
+          <h3 (click)="openchat(item)">{{item.groupName}}</h3>
+        </ion-item>
+      </ion-list>
 </ion-content>
