--- a/family-traacking-app/src/pages/groups/groups.html
+++ b/family-traacking-app/src/pages/groups/groups.html
@@ -23,7 +23,7 @@
           <ion-avatar item-left>
             <img src="{{item.groupimage}}">
           </ion-avatar>
-          <h3 (click)="openchat(item)">{{item.groupName}}</h3>
+          <h3 (click)="openGroup(item)">{{item.groupName}}</h3>
         </ion-item>
       </ion-list>
 </ion-content>
