--- a/family-traacking-app/src/pages/dashboard/dashboard.html
+++ b/family-traacking-app/src/pages/dashboard/dashboard.html
@@ -3,16 +3,34 @@
     <button ion-button icon-only menuToggle>
       <ion-icon name="menu"></ion-icon>
     </button>
-    <ion-title>Groups</ion-title>
-    <ion-buttons end>
-      <button ion-button icon-only (click)="addgroup()">
-        <ion-icon name="contacts"></ion-icon>
-      </button>
-    </ion-buttons>
+    <ion-title>Dashboard</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  <ion-list no-lines>
+    <ion-list-header>
+      Requests
+    </ion-list-header>
+    <ion-item-sliding *ngFor="let item of myrequests">
+      <ion-item>
+        <ion-avatar item-left>
+          <img src="{{item.photoURL}}">
+        </ion-avatar>
+        <h4>{{item.displayName}}</h4>
+      </ion-item>
+      <ion-item-options>
+        <button ion-button color="secondary" (click)="accept(item)">
+          <ion-icon name="checkmark"></ion-icon>
+          ADD
+        </button>
+        <button ion-button color="danger" (click)="ignore(item)">
+          <ion-icon name="trash"></ion-icon>
+          NOPE
+        </button>
+      </ion-item-options>
+    </ion-item-sliding>
+  </ion-list>
 </ion-content>
